# grid-ledger-insights

./: .env.example  .gitignore  AMENDMENTS_Q2_2026_MASTER_COPY.md  ARCHITECTURE.md  ARCHITECTURE_STATEMENT_MAY_2026.md  ARTIFACT_1_NODE_INVENTORY_QUERY_COMPLETE.md  BACKEND_PERSISTENCE_STEP0_IMPLEMENTATION.md  BOUNDED_IMPERFECTION_DOCTRINE.md  CANONICAL_TERMINOLOGY_V1_0.md  CAPITAL_CONTROLS_GUIDE.md  CAPITAL_IMPACT_LAYER.md  CERTIFICATE_INVALIDATION_POLICY_V1_0.md  CUMULATIVE_LOSS_PRESSURE.md  CUMULATIVE_LOSS_PRESSURE_QUICK_REF.md  DATA_PERSISTENCE_ANALYSIS.md  DEPLOYMENT_READINESS_CRITICAL_GAP.md  DEPLOYMENT_READY.md  DEPLOYMENT_STAGING_GUIDE.md  DEPLOYMENT_VERIFICATION_SEQUENCE.md  Dockerfile  EFFECTIVE_RATE_OBSERVATION_PROTOCOL.md  FORENSIC_BASELINE_NODE02.md  FRONTEND_BUILD_PLAN_PHASE1.md  FRONTEND_ENV_CONFIGURATION.md  FRONTEND_INTEGRATION_CHECKLIST.md  FRONTEND_INTEGRATION_STEP0.md  GLASS_BOX_CERTIFICATE_NABIWI_2026_05_08.json  GRADUAL_SQUEEZE.md  HARD_ECONOMIC_FLOOR.md  IMPLEMENTATION_COMPLETE.md  INTEGRITY_PROOF_MAY_2026.md  MIGRATION_MOVE_A.md  MOVE_A_CONCURRENCY_QUICKSTART.md  MOVE_A_PATCHES_SUMMARY.md  MOVE_B_COMPLETE.md  MOVE_B_IMPLEMENTATION_GUIDE.md  MOVE_B_PATCHES.md  NABIWI_CYCLE_CALIBRATION.md  NABIWI_DAILY_PRODUCTION_ANALYSIS_FEB_MAR_2026.md  NABIWI_FEB_MAR_2026_CYCLE_ANALYSIS.md  (+106 more)
_zip_verify/: CLEAN_vs_DIRTY_CYCLES_METHODOLOGY_NOTE.md  CYCLE_VERIFICATION_REPORT_TEMPLATE_V1_0.md  DATA_ROOM_MANIFEST.md  FACILITY_COVENANT_LANGUAGE_V1_0.md  MCD-001.md  REPLAY_INSTRUCTIONS_V1_0.md  SID-002.md
assets/: index-Bl5tJBeh.css  index-COWTZ9bR.js
backend/: main.py  (+23 more)
(+98 files in other folders)
