[project]
name = "gridledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.8",
    "pynacl>=1.5.0",
    "cryptography>=41.0.0",
    "ntplib>=0.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
